# edumap

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/agents/: extractor_agent.py
app/utils/: mindmap_generation.py  transcriber.py
backend/: main.py  render.yaml  requirements.txt
backend/app/agents/: extractor_agent.py
backend/app/utils/: mindmap_generation.py  transcriber.py
backend/data/json/: Ancient-Roman-Life-and-History.json  The-French-Revolution.json
backend/data/transcripts/: tmpkzdhauqs.wav.txt  tmpv9r1u171.wav.txt
data/json/: Mosquito-borne disease surveillance and prevention using a novel, low-cost virus detection method..json  The French Revolution.json  french_revolution.json
data/transcripts/: 2014 Three Minute Thesis winning presentation by Emily Johnston (1).mp3.txt  ad8e0416-ef1c-4e18-92de-e4a895812abe.txt  french_revolution.wav.txt
frontend/: main.py  requirements.txt
