[project]
name = "edumap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.27",
    "faster-whisper>=1.1.1",
    "graphviz>=0.20.3",
    "matplotlib>=3.10.3",
    "mflow>=1.2.1",
    "mlflow>=3.1.0",
    "networkx>=3.5",
    "openai-whisper>=20240930",
    "pyvis>=0.3.2",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
